refactor(Product): Add product Factory method
1. Add ProductTest
2. Change default constructor's access modifier
3. Remove setter