@@ -13,6 +13,7 @@ import kitchenpos.products.tobe.domain.Product;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Random;
 import java.util.UUID;
 
@@ -71,7 +72,7 @@ public class Fixtures {
         order.setType(OrderType.DELIVERY);
         order.setStatus(status);
         order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
+        order.setOrderLineItems(List.of(orderLineItem()));
         order.setDeliveryAddress(deliveryAddress);
         return order;
     }
@@ -82,7 +83,7 @@ public class Fixtures {
         order.setType(OrderType.TAKEOUT);
         order.setStatus(status);
         order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
+        order.setOrderLineItems(List.of(orderLineItem()));
         return order;
     }
 
@@ -92,7 +93,7 @@ public class Fixtures {
         order.setType(OrderType.EAT_IN);
         order.setStatus(status);
         order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
+        order.setOrderLineItems(List.of(orderLineItem()));
         order.setOrderTable(orderTable);
         return order;
     }
@@ -122,10 +123,6 @@ public class Fixtures {
     }
 
     public static Product product(final String name, final long price) {
-        final Product product = new Product();
-        product.setId(UUID.randomUUID());
-        product.setName(name);
-        product.setPrice(BigDecimal.valueOf(price));
-        return product;
+        return Product.from(name, BigDecimal.valueOf(price));
     }
 }
